--- a/micronemez/Micronemez/Micronemez/en.lproj/MainStoryboard_iPhone.storyboard
+++ b/micronemez/Micronemez/Micronemez/en.lproj/MainStoryboard_iPhone.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="2844" systemVersion="11G63" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="I0p-cU-mNE">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="2844" systemVersion="11G63" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="I0p-cU-mNE">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="1930"/>
     </dependencies>
@@ -12,10 +12,9 @@
                         <rect key="frame" x="0.0" y="64" width="320" height="504"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <button opaque="NO" autoresizesSubviews="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WqK-8r-RA3">
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="100" id="BTP-qM-6Fs"/>
-                                </constraints>
+                            <button opaque="NO" autoresizesSubviews="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="WqK-8r-RA3">
+                                <rect key="frame" x="110" y="37" width="100" height="44"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                 <color key="tintColor" red="1" green="0.5" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <state key="normal" title="Play">
@@ -29,7 +28,9 @@
                                     <segue destination="jRb-Zr-eOr" kind="push" id="Dnd-Rb-AEL"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" autoresizesSubviews="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oYE-b3-9ty">
+                            <button opaque="NO" autoresizesSubviews="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="oYE-b3-9ty">
+                                <rect key="frame" x="110" y="130" width="100" height="44"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                 <color key="tintColor" red="1" green="0.5" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <state key="normal" title="Record">
@@ -43,7 +44,9 @@
                                     <segue destination="KRL-Ox-cI8" kind="push" id="fLn-Z1-P31"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" autoresizesSubviews="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TtH-df-YaF">
+                            <button opaque="NO" autoresizesSubviews="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="TtH-df-YaF">
+                                <rect key="frame" x="110" y="227" width="100" height="44"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                 <color key="tintColor" red="1" green="0.5" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <state key="normal" title="Merge">
@@ -59,16 +62,6 @@
                             </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="0.5" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                        <constraints>
-                            <constraint firstItem="oYE-b3-9ty" firstAttribute="leading" secondItem="TtH-df-YaF" secondAttribute="leading" type="default" id="En5-6A-Rmn"/>
-                            <constraint firstItem="oYE-b3-9ty" firstAttribute="trailing" secondItem="TtH-df-YaF" secondAttribute="trailing" type="default" id="Ukn-y8-rjI"/>
-                            <constraint firstItem="WqK-8r-RA3" firstAttribute="top" secondItem="3" secondAttribute="top" constant="37" id="VZ3-MF-lYR"/>
-                            <constraint firstItem="oYE-b3-9ty" firstAttribute="top" secondItem="3" secondAttribute="top" constant="130" id="XwI-dj-GER"/>
-                            <constraint firstItem="WqK-8r-RA3" firstAttribute="leading" secondItem="oYE-b3-9ty" secondAttribute="leading" type="default" id="goN-Fy-2aF"/>
-                            <constraint firstItem="TtH-df-YaF" firstAttribute="top" secondItem="3" secondAttribute="top" constant="227" id="hQn-HA-Btz"/>
-                            <constraint firstItem="oYE-b3-9ty" firstAttribute="centerX" secondItem="3" secondAttribute="centerX" type="default" id="ksM-bI-fgq"/>
-                            <constraint firstItem="oYE-b3-9ty" firstAttribute="trailing" secondItem="WqK-8r-RA3" secondAttribute="trailing" type="default" id="y4k-aJ-sIx"/>
-                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="MICRONEMEZ" id="C8M-e6-LBT">
                         <barButtonItem key="backBarButtonItem" title="Item" id="jj1-UM-oz4"/>
@@ -116,7 +109,9 @@
                         <rect key="frame" x="0.0" y="64" width="320" height="504"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0Vu-EU-r1y">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="0Vu-EU-r1y">
+                                <rect key="frame" x="126" y="93" width="69" height="44"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                 <state key="normal" title="Select">
                                     <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
@@ -131,10 +126,6 @@
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                        <constraints>
-                            <constraint firstItem="0Vu-EU-r1y" firstAttribute="top" secondItem="Cbt-Tk-lVz" secondAttribute="top" constant="93" id="A6T-RN-uyh"/>
-                            <constraint firstItem="0Vu-EU-r1y" firstAttribute="centerX" secondItem="Cbt-Tk-lVz" secondAttribute="centerX" type="default" id="WBu-5z-DCb"/>
-                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="8QJ-tE-TGH"/>
                 </viewController>
@@ -164,9 +155,6 @@
     <classes>
         <class className="MergeViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/MergeViewController.h"/>
-        </class>
-        <class className="NSLayoutConstraint" superclassName="NSObject">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
         </class>
         <class className="PlayViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/PlayViewController.h"/>
